# CDLogger

./: CMakeLists.txt
CDLoggerTester/: CMakeLists.txt  loggertester.cpp
include/: Logger.h
src/: CMakeLists.txt  Logger.cpp
